--- a/Overcoat.xcodeproj/xcshareddata/xcschemes/Overcoat.xcscheme
+++ b/Overcoat.xcodeproj/xcshareddata/xcschemes/Overcoat.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "050779D21B81D8C100E2A101"
